--- a/source/_posts/2022年终总结.md
+++ b/source/_posts/2022年终总结.md
@@ -6,8 +6,19 @@ date: 2022-01-25 19:32:00
 tags: [生活日志, 年终总结]
 ---
 
-# 往年回顾
-今年真是幸运的一年，家庭事业双丰收。
+今年真是幸运的一年，家庭事业双丰收。也恭祝朋友们年年好运！
 
-先说家庭，首先是家庭新添一个成员。和家中父亲的关系
-再说工作
+每一年的日子总过的零零碎碎。原先就跟朋友抱怨过，自己缺乏长期较为细致的规划。这种规划在进国企之前，我一直认为是失真且低效的，因为落不了地啊。过去的生活就围绕着工作转，工作的重心就是生活的重心。小公司低端的九九六的工作节奏是真的抽不出心气神去做额外的事情，不像那些互联网大厂，公司提供健身房、零食间、合理的各种补贴等福利，可以在公司里就把日子过的规律起来。不过年年都在成长，也庆幸之前小公司日子过的比较紧实，想学，有机会也主动去学，积攒到了多方面的能力和经验，像是一个全面手，研发、项目管理、方案设计都入了门，也不算辜负了自己含辛茹苦天南地北的跑动搞业务了。
+
+但今年有点不一样，一是入职国企近一年，辛勤劳作获得公司的新锐之星和全年优秀，逐步熟悉公司的工作，生活有了节奏也趋向逐步稳定。二是恰逢夫人生产，高高兴兴休陪产假，多出了大把时间可以挥霍。去仔细思考自己的成长方向，这份规划也就有了它存在的价值。
+
+# 现状及规划
+### 家庭
+今年新添一个小成员。大名靖之，小名星星，从此人生又多出了一个名为父亲的角色，做爸爸要好好学习，和妻子商量过了，后续采用严父慈母的教育方式，同时也要更加努力，成为小朋友的榜样。靖之的到来，家中老父亲也多了点笑容，毕竟在父亲的眼里，家中独子定居在外，一年到头回家三两次，虽然各自安好，对于年过半百的老人而言，难免有些孤单和冷清，如今有了子嗣，也算了了他的一番心事，往后每年也应该多找机会带老婆孩子回家住住。去年年末将老母亲接到广州小住，也有出于照顾她的一些考虑，但是生活习惯上的差异，也是让我稍微有些急躁，总是缺乏应有的耐心和包容，必须要认真反省了。妻子今年也成长了不少，思维方式有了长足的进步，依旧缺乏些自信心和处世经验，今年同她一起学习进步。
+### 工作
+关于工作，
+### 健康
+
+### 朋友
+
+### 灵魂
