--- a/source/_posts/000-2020春节总结.md
+++ b/source/_posts/000-2020春节总结.md
@@ -1,7 +1,7 @@
 ---
-title: 2020春
+title: 2020春节总结
 categories:
-  - 生活随笔
+  - 年终总结
 date: 2020-01-25 19:32:00
 tags: [生活日志, 年终总结]
 ---
@@ -20,7 +20,7 @@ tags: [生活日志, 年终总结]
 
 
 # 总体评价
-项目管理期间学到了一个冷门知识，‘知识和强有力是冲突的,不是并立的，强有力不许人民有自由思想,因为这能使能力分散’。在项目管理中的意思呢就是如果产品设计和UI设计完整的话，底层码农是不需要太多的个人思想的，例如这个表单是不是合理，这个按钮有什么意义。如果在开发过程中发现有很多不合逻辑的地方，就说明这个设计并不够强有力。感觉也算是对一种规律的一个片面的诠释。
+项目管理期间想到了一个冷门知识的阐释，‘知识和强有力是冲突的,不是并立的，强有力不许人民有自由思想,因为这能使能力分散’。在项目管理中的意思呢就是如果产品设计和UI设计完整的话，底层码农是不需要太多的个人思想的，例如这个表单设计是不是合理，这个按钮有什么意义。如果在开发过程中发现有很多不合逻辑的地方，就说明这个设计并不够强有力。感觉也算是对一种规律的一个片面的诠释。
 
 整体对自己的评价就是稳且尽力，收获蛮多，前端架构方面，项目管理和产品设计。也发现了自己的不足。例如说一件事情复杂，这件事情到底是怎么样的，过程其实不太重要，解决方案和结果才是领导所期望看到的。了解一个和评价一个人或事也需要不短的时间，才能看到骨子里，看进本质里。才能有效的把握住核心，以不变应万变。还有部分自己的缺点，就是锋芒毕露，经常被拿作例子和枪使，虽然一方面提高了出场率和促进倒逼成长,但是另一方面对人际关系而言，树立了一些隐患，同时也放大了自己性格上的不足之处。但这与自己的原则倒是息息相关的，个人觉得生活其实大部分就是物竞天择，适者生存，突出一个 “争” 字，本质是“妥协”，妥协同时也意味着不圆满。又例如，直立行走解放了双手，却也让我们更容易腰酸背痛；骨骼结构需要在健壮与灵活性之间做平衡。所以这一块问题，还没有一个合适的答案和解决方案。去年其实一直在考虑后面十年的路，毕业也四五年了，整体水平中等偏上，还是想努力一把，把天花板尽量架的高一点。修养方面也有了一些进步，摸到了一些苗头，没成框架，这玩意跟年龄阅历挂钩，倒是急不得，还是需要多看点书。
 
