--- a/source/_posts/111-地信公司行业现状.md
+++ b/source/_posts/111-地信公司行业现状.md
@@ -1,9 +1,9 @@
 ---
-title: GIS行业公司运营的个人想法
+title: 地信公司行业现状
 categories:
-  - 生活随笔
+  - 杂记
 date: 2018-01-17 17:28:12
-tags: [生活日志]
+tags: [杂记，地理信息系统]
 ---
 
 前几年刚入职不久就相继有几个好朋友兼同事离职，心里有点难过，在这个行业也待了几年了，对遇到一些问题进行记录和自己觉得比较重要对成因进行分析和一些自己的看法。
