--- a/source/_posts/666-前端架构.md
+++ b/source/_posts/666-前端架构.md
@@ -1,9 +1,10 @@
 ---
 title: 前端架构技术整理 
 categories:
-  - web
+  - 代码研发
+  - 前端架构
 date: 2019-12-15 09:22:00
-tags: [前端]
+tags: [前端，前端架构]
 ---
 前端近五年了， 按照一万小时定律，我现在应该也不平凡了，但是到超凡，那也还没有。 笼统点的自我感觉就是基本点都通了，应用类的技能都能用上，像是读完了高中。天文地理生物化学都知道些脉络，但是再细致一些，就需要更系统地进阶性学习。
 
