--- a/source/_posts/666-前端道路摸索.md
+++ b/source/_posts/666-前端道路摸索.md
@@ -1,9 +1,9 @@
 ---
 title: 前端工程师进阶道路方向摸索
 categories:
-  - 生活随笔
+  - 代码研发
 date: 2020-02-24 19:28:12
-tags: [生活日志, 前端]
+tags: [方向, 前端开发]
 ---
 
 首先要明确一点，正确评估自己的能力水平和性格特点，走技术专家路线还是走管理路线。技术专家也是有好几个方向的，一般还是与实际业务结合 偏应用路线解决方案，使自己的技术形成一个闭环。通过不断的学习使得解决方案构建升级。
