--- a/source/_posts/667-3度带的还是6度带记录.md
+++ b/source/_posts/667-3度带的还是6度带记录.md
@@ -1,11 +1,9 @@
 ---
 title: 3度带的还是6度带记录
-url: 313.html
-id: 313
 categories:
-  - webgis
+  - 代码研发
 date: 2019-01-19 09:32:00
-tags: [前端, GIS]
+tags: [前端, webgis, 地理信息系统]
 ---
 
 \*\*地球的一度是 6378km\*3.1416\*2/360=111.3km，
