--- a/source/_posts/777-项目经理.md
+++ b/source/_posts/777-项目经理.md
@@ -1,9 +1,9 @@
 ---
 title: 项目管理转型纪要
 categories:
-  - 生活随笔
+  - 项目管理
 date: 2020-06-15 19:32:00
-tags: [生活日志]
+tags: [项目管理，方向]
 ---
 
 先前有担任过项目经理，业务需求比较明确,倾向于兼技术经理，偏业务需求挖掘算是第一次做。可能也没有纯粹的项目经理，业务和技术应该都是需要具备的其中几项辅助技能。
