--- a/source/_posts/788-产品经理.md
+++ b/source/_posts/788-产品经理.md
@@ -1,10 +1,20 @@
 ---
-title: 产品经理（从一个前端工程师的角度看待）
+title: 产品经理
 categories:
-  - 生活随笔
+  - 产品设计
 date: 2020-10-25 19:32:00
-tags: [生活日志]
+tags: [产品设计, 方案]
 ---
+待补充··············
+
+
+
+
+
+
+
+
+
 
 我觉得低阶产品有两方面的瓶颈， 
 一个是个人的见识力，俗称眼力劲，
