--- a/source/_posts/000-2017春节总结.md
+++ b/source/_posts/000-2017春节总结.md
@@ -1,12 +1,12 @@
 ---
-title: 2016年终总结
+title: 2017春节总结
 categories:
-  - 生活随笔
+  - 年终总结
 date: 2017-01-17 18:02:55
 tags: [生活日志, 年终总结]
 ---
 
-停笔也有一段时间，毕业这一年事情总是最多的，先理一个大概，接触前端也差不多快要两三年了，说起来也并不是偶然，始毕业于计算机系，互联网行业形势看好，再加上一直想拥有一个属于自己的博客来记些随笔。也就跌跌撞撞往前端开发这条路上摸索，由于大学时期路线始终不明确(消息闭塞)，其实毕业前半年我才想明白，对于一个快要毕业的非重点小本而言，我已经失去了搭上互联网一线快车的机会，如何平滑步入社会，一脚不踏空，再逐步地有计划地搭建本身的知识架构体系，才能算是职业生涯好的开端。
+停笔也有一段时间，毕业这一年事情总是最多的，先理一个大概，接触前端也差不多快要两三年了，说起来也并不是偶然，始毕业于计算机系，互联网行业形势看好，再加上一直想拥有一个属于自己的博客来记些随笔。也就跌跌撞撞往前端开发这条路上摸索，由于大学时期路线始终不明确(消息闭塞)，其实毕业前半年我才想明白，对于一个快要毕业的非重点小本而言，我已经失去了搭上互联网头部快车的机会，如何平滑步入社会，一脚一脚不踏空，再逐步地有计划地搭建本身的知识架构体系，才能算是职业生涯正常的开端。
 
 这一脚没走空也没四平八稳，小私企的经历算是社会给我上的第一课。短短八个月，没有前辈领门，领导层利益争锋内耗项目中断，停薪指派外业出差干杂活，公司地址多次搬迁。对于一个意志坚强的工程师和具有优秀党性的共青团员来说，内心都几近崩溃。也终究熬了过来，更何况还有可怜的几位同学难友和同住五年的舍友一起感受这般生命的坚韧，倒也留下了共患难的交情。年后难兄难弟也各奔东西寻了个好去处。而我，又在广州一家初创公司经历两个月的加班洗礼后，生活终究为我开了一朵小花，进了一家环境稳定的新三板公司，稳定驻扎才开始有空闲打理我的博客，打理我自己。 回顾一年，时而大梦初醒，奋发图强，时而麻醉自己，消遣娱乐。相对于刚毕业时不知所措，到茫然失措身心疲惫。日积月累的负面能量开始影响着日常工作和学习，丧...许久许久，老友小聚才能小松一口气，缓一口气继续前行。但比逃避学习更为严重的是，有种思绪迫切让你从生活中做出抉择，职业选错了？学习曲线有问题？学习路线会不会过时？是否陷入低水平的勤奋和毫无意义的学习？自己的核心竞争力究竟在哪里？直指内心，时间拖得越久，状态越差。
 
