--- a/source/_posts/000-2022春节总结.md
+++ b/source/_posts/000-2022春节总结.md
@@ -1,7 +1,7 @@
 ---
-title: 2022春
+title: 2022春节总结
 categories:
-  - 生活随笔
+  - 年终总结
 date: 2022-01-25 19:32:00
 tags: [生活日志, 年终总结]
 ---
@@ -12,7 +12,7 @@ tags: [生活日志, 年终总结]
 
 但今年有点不一样，一是入职国企近一年，辛勤劳作获得公司的新锐之星和全年优秀，逐步熟悉公司的工作，生活有了节奏也趋向逐步稳定。二是恰逢夫人生产，高高兴兴休陪产假，多出了大把时间可以挥霍。去仔细思考自己的成长方向，这份规划也就有了它存在的价值。
 
-# 现状及规划
+## 现状及规划
 ### 家庭
 今年新添一个小成员。大名靖之，小名星星，从此人生又多出了一个名为父亲的角色，做爸爸要好好学习，和妻子商量过了，后续采用严父慈母的教育方式，同时也要更加努力，成为小朋友的榜样。靖之的到来，家中老父亲也多了点笑容，毕竟在父亲的眼里，家中独子定居在外，一年到头回家三两次，虽然各自安好，对于年过半百的老人而言，难免有些孤单和冷清，如今有了子嗣，也算了了他的一番心事，往后每年也应该多找机会带老婆孩子回家住住。去年年末将老母亲接到广州小住，也有出于照顾她的一些考虑，但是生活习惯上的差异，也是让我稍微有些急躁，总是缺乏应有的耐心和包容，必须要认真反省了。妻子今年也成长了不少，思维方式有了长足的进步，依旧缺乏些自信心和处世经验，今年同她一起学习进步。
 ### 工作
