--- a/source/_posts/010-关于平凡.md
+++ b/source/_posts/010-关于平凡.md
@@ -14,6 +14,4 @@ tags: [生活日志]
 
 先讲格自己，首先得明白，人的存在是短暂的、偶然的、无目的的。社会、家庭和自身的选择塑造了一个完整的人格，这个人做的什么工作，信奉什么戒条，有什么目标都是随时间不断调整变优，以我为例，我觉得现阶段，我该如何合理的分配好时间呢，大到物质层面、精神层面、人际关系层面，小到健身房健身、游泳、跑步、羽毛球、篮球、游戏、看直播、工具书阅读、电子书阅读、喝酒、练字或是如我当下的写日记。我该如何用规则去束缚这些事项呢。
 
-
-
-
+人最大的痛苦就是无法跨越知道和做到的鸿沟，要接受自己的有限性，承认自己是有限的，承认自己的逻辑是有限的，承认自己的理性是有限的，承认自己的阅读是有限的，承认整个人整个人都在偏见的，你的一生就是在走出偏见人
