--- a/source/_posts/010-关于童心.md
+++ b/source/_posts/010-关于童心.md
@@ -1,12 +1,10 @@
 ---
-title: 平凡之路
+title: 关于童心
 categories:
   - 生活随笔
 date: 2021-8-15 19:32:00
-tags: [生活日志]
+tags: [生活日志, 关于灵魂]
 ---
-
-
 
 人们常说年轻的时候要保持认真和真诚。
 美剧《冰与火之歌》有这么一句话， " kill the boy, let the man be born ", 我觉得是在讲述成长，
