--- a/source/_posts/666-前端开发规范.md
+++ b/source/_posts/666-前端开发规范.md
@@ -1,9 +1,10 @@
 ---
 title: 前端架构一----前端开发规范
 categories:
-  - web
+  - 代码研发
+  - 前端架构
 date: 2019-08-15 09:32:00
-tags: [前端, 架构]
+tags: [前端开发，前端架构]
 ---
 
 ## 1. 为什么需要 “前端开发规范”
