--- a/source/_posts/000-2022春节总结.md
+++ b/source/_posts/000-2022春节总结.md
@@ -10,15 +10,36 @@ tags: [生活日志, 年终总结]
 
 每一年的日子总过的零零碎碎。原先就跟朋友抱怨过，自己缺乏长期较为细致的规划。这种规划在进国企之前，我一直认为是失真且低效的，因为落不了地啊。过去的生活就围绕着工作转，工作的重心就是生活的重心。小公司低端的九九六的工作节奏是真的抽不出心气神去做额外的事情，不像那些互联网大厂，公司提供健身房、零食间、合理的各种补贴等福利，可以在公司里就把日子过的规律起来。不过年年都在成长，也庆幸之前小公司日子过的比较紧实，想学，有机会也主动去学，积攒到了多方面的能力和经验，像是一个全面手，研发、项目管理、方案设计都入了门，也不算辜负了自己含辛茹苦天南地北的跑动搞业务了。
 
-但今年有点不一样，一是入职国企近一年，辛勤劳作获得公司的新锐之星和全年优秀，逐步熟悉公司的工作，生活有了节奏也趋向逐步稳定。二是恰逢夫人生产，高高兴兴休陪产假，多出了大把时间可以挥霍。去仔细思考自己的成长方向，这份规划也就有了它存在的价值。
+但今年有点不一样，一是入职国企近一年，辛勤劳作获得公司全年优秀考评，获评新锐之星，进一步逐步熟悉公司的工作，生活有了节奏也趋向逐步稳定。二是恰逢夫人生产，高高兴兴休陪产假，多出了大把时间可以挥霍。去仔细思考自己的成长方向，这份规划也就有了它存在的价值。
 
 ## 现状及规划
 ### 家庭
-今年新添一个小成员。大名靖之，小名星星，从此人生又多出了一个名为父亲的角色，做爸爸要好好学习，和妻子商量过了，后续采用严父慈母的教育方式，同时也要更加努力，成为小朋友的榜样。靖之的到来，家中老父亲也多了点笑容，毕竟在父亲的眼里，家中独子定居在外，一年到头回家三两次，虽然各自安好，对于年过半百的老人而言，难免有些孤单和冷清，如今有了子嗣，也算了了他的一番心事，往后每年也应该多找机会带老婆孩子回家住住。去年年末将老母亲接到广州小住，也有出于照顾她的一些考虑，但是生活习惯上的差异，也是让我稍微有些急躁，总是缺乏应有的耐心和包容，必须要认真反省了。妻子今年也成长了不少，思维方式有了长足的进步，依旧缺乏些自信心和处世经验，今年同她一起学习进步。
+今年新添一个小成员。大名靖之，小名星星，从此人生又多出了一个名为父亲的角色，做爸爸要好好学习，和妻子商量过了，后续采用严父慈母的教育方式，同时也要更加努力，成为小朋友的榜样。靖之的到来，乡下家中老父亲也多了点笑容，在父亲的眼里，家中独子定居在外，一年到头回家三两次，虽然各自安好，但对于年过半百的老人而言，难免有些孤单和冷清，如今香火有了传承，也算了了他的一番心事。往后每年也应该多找机会带老婆孩子回家住住。去年年末将老母亲接到广州小住，也有出于照顾她的一些考虑，但是生活习惯上的差异，也是让我稍微有些急躁，总是缺乏应有的耐心和包容，必须要认真反省了。妻子近年来成长了不少，思维方式有了长足的进步，依旧缺乏些自信心和处世经验，今年我也应多做些考虑，同她一起学习进步。
+
 ### 工作
-关于工作，
-### 健康
+1）2021年个人工作复盘
+大半年驻点分公司自主实施的城市大脑的项目里，不仅是让我快速融入国企公司特有的文化和环境，认识了解了其项目集成管理方式，对之前的项目管理经验进行了映照比对及总结，将精华充分沉淀吸收；另一方面极大的扩展对智慧城市，包括城市管理、服务、产业发展等相关政策的了解。美中不足是杂事缠身，未能将每个子建设专题的设计内容及讲演文件好好理解学习并熟练应用。
+2）2022年个人工作计划
+1、收尾城市大脑的项目。
+2、自然资源方案支撑及市镇街的城市大脑售前支撑：
+跨部门的业务及平台。例如调查监测、重大项目监管、低效工业改造、低效工业用地改造、物联感知、CIM及实景三维，可以重点推进。如果是行业壁垒较高的领域，在客情支持的情况下，可结合供应商强强联合，结合自身的优势和产品进行嵌入。
+3、继续支撑地市片区：
+其实作为片区经理也好，作为客户经理也好，除了价值交换外，无非是拜访勤快一些，将个人形象尽量充盈丰满的表达出去，融入到对方的工作及生活之中去，不求合作共赢，多交交朋友，就图个不要倒戈相向便好了。
+4、自主实施项目驻场实施：
+介于孩子出生的缘故，我考虑到这一点，希望下班后有更多的时间和妻子陪伴小朋友成长。
+
+## 健康 = 自律
+去年一年整体来说，还是比毕业后的几年来好了一些。规律的工作时间也导致作息合理了起来，饮食健康，水分也补充及时。不足之处就是锻炼未达到预期和晚睡这两个问题。都是下班后的生活，得给规律起来。别钱没赚的比加班多就算了，身子骨也被掏空了。
+**健身**：起先规规矩矩的去健身房办了张卡，游泳健身效果显著。但一旦脱离便健身房，自律程度便下降了几百个档次。虽然也有一些工作上的，锻炼身体要开阔思路，发挥工地健身的精髓，哪里都是健身房。建立起多套模式吧，周边有健身房合适的，直接上，不行的就上徒手锻炼。写着写着就给自己买了一条弹力带，到货了就直接丢车上，出差专用。
+**早睡早起**：这一点需得好好斟酌了，回想以往，青春期荷尔蒙爆棚的时候，彻夜鏖战都不是什么大问题，面上爆个痘，两黑眼圈带点红血丝，补个觉就完事了。如今的感受是这身体素质明显不如往昔，奇奇怪怪的是，每当真正想睡觉的时候，思绪灵感开始一条条飘过的时候，都是深更半夜。
+要求是晚上十点钟之后非必要不看手机（物理距离远离），一个小时的阅读，十一点前完成入睡。
+1、478睡觉呼吸法。吸气4秒，憋7秒，吐8秒，循环。
+2、闭眼冥想宇宙。
+3、培养仪式感：睡前一杯温牛奶后刷牙，烫脚，看合适的书。
+**戴口罩，勤洗手**：不论是疫情防控还是个人卫生习惯上，都要养成卫生好习惯。
+
 
 ### 朋友
-
+去年的春节，因为妻子疫情期间值班及不能出省的缘故，便在家里吃了个年夜饭，短短待了三两天，甚至没啥时间去朋友家坐坐，偶尔回忆起学生时代的好友，随着工作城市的落地，也一一渐行渐远，或者说我才是走的比较远的那一个，名字逐渐陌生了起来。大学同学倒还好，隔三差五的总能听到一些消息，某某晋升结婚生子，虽然也开始模糊了起来，逐渐减少了联系，但依旧可以发去祝福和关心。而换了几家公司，每家公司交了一大堆朋友，最终也只有三两个逢年过节保持联系。如今处在信息化的时代，书信瞬时就打，当然今年这点十分的有幸，
 ### 灵魂
+比往年确是多读了几本书，之前工作中空寂的感觉一下就消下去不少。我常常嘲笑自己，书读的不多
