--- a/source/_posts/777-项目经理.md
+++ b/source/_posts/777-项目经理.md
@@ -34,3 +34,15 @@ tags: [项目管理, 方向]
 脑子想的都是概念，实践出来都是细节。
 
 希望后面对我的评论是靠谱而有趣。
+
+整理一下后面需要整理的目录：
+1、崇高情怀。07p
+2、项目负责人的自我修养。20、114、08、22、86、84、127、175、177、179、229、230、258
+3、如何做好管理工作。10、21、63、69、110、133、178、214、218、254
+3、团队是重要。 ？？？
+3、工作要求。01、88、154、248
+4、树立学习价值观 、06、41、83、60、180、244
+5、要保持先进性。 143、152
+5、如何解决困难和压力 42、58、98、142、222
+6、如何抓好工作 91、240、241、243
+8、慎独。272
