--- a/source/_drafts/010-关于认知探索.md
+++ b/source/_drafts/010-关于认知探索.md
@@ -14,7 +14,7 @@ date: 2020-10-25 19:32:00
 
 不知道什么时候开始想到要把自己坎坷的认知路途稍稍整理出来。时间长久，应是初生自我及自觉意识后的一个阶段， 当时回想起浑浑噩噩的往事，便想着成长不易，便希望把开蒙启智的思路稍稍整理一下。最怕这种睡觉前一闪而过的想法。刚开始很可惜，闪的频繁了才开始。
 
-对生活的认知本身不是一篇文章、一本书就能讲完，每个人的出生背景及经历都完全不一样，
+对生活的认知本身不是一篇文章、一本书就能讲完，每个人的出生背景及经历都完全不一样.
 
 姑且先讲些背景，整体很普通。
 
@@ -52,6 +52,6 @@ date: 2020-10-25 19:32:00
 
 你如果成功，得到的会是假朋友和真敌人，但不管怎样，还是要成功；你耗费数年所建设的，可能会毁于一旦，但不管怎样，还是要坚持；心胸最博大最宽容的人，可能会被心胸狭窄的人击倒，但不管怎样，该是要志存高远；人们的确需要帮助，但当你真的帮助他们的时候，他们反而攻击你，但不管怎样，还是要帮助他；当你将你拥有的最好的东西献给这个世界，你可能会被反咬一口，但不管怎样，还是要把最宝贵的东西献给世界。这也许就是经验哲学家阿奎拉所说的:我们今生活着的唯一意义，就是超越今生。
 
-年纪越大呢，决策就开始变得有些犹豫。瞻前顾后，优柔寡断。
+年纪越大呢，决策就开始变得有些犹豫。瞻前顾后，优柔寡断。法外狂徒罗翔老师说过，人要接受自己的有限,人的逻辑、理性、阅读都是有限的,整个人就是在偏见中,人的一生就是在走出偏见。
 
 前不久突然翻起几年前买的一本书，《论人的成长》，作者卡尔.罗杰斯。零散记忆。努力成长。
