--- a/source/_posts/000-2017春.md
+++ b/source/_posts/000-2017春.md
@@ -1,9 +1,11 @@
 ---
-title: 2017春节总结
+title: 2017春
 categories:
   - 年终总结
 date: 2017-01-17 18:02:55
-tags: [生活日志, 年终总结]
+tags:
+  - 生活日志
+  - 年终总结
 ---
 
 停笔也有一段时间，毕业这一年事情总是最多的，先理一个大概，接触前端也差不多快要两三年了，说起来也并不是偶然，始毕业于计算机系，互联网行业形势看好，再加上一直想拥有一个属于自己的博客来记些随笔。也就跌跌撞撞往前端开发这条路上摸索，由于大学时期路线始终不明确(消息闭塞)，其实毕业前半年我才想明白，对于一个快要毕业的非重点小本而言，我已经失去了搭上互联网头部快车的机会，如何平滑步入社会，一脚一脚不踏空，再逐步地有计划地搭建本身的知识架构体系，才能算是职业生涯正常的开端。
