--- a/source/_posts/000-2022春.md
+++ b/source/_posts/000-2022春.md
@@ -1,5 +1,5 @@
 ---
-title: 2022春节总结
+title: 2022春
 categories:
   - 年终总结
 date: 2022-01-25 19:32:00
@@ -42,4 +42,4 @@ tags: [生活日志, 年终总结]
 ### 朋友
 去年的春节，因为妻子疫情期间值班及不能出省的缘故，便在家里吃了个年夜饭，短短待了三两天，甚至没啥时间去朋友家坐坐，偶尔回忆起学生时代的好友，随着工作城市的落地，也一一渐行渐远，或者说我才是走的比较远的那一个，名字逐渐陌生了起来。大学同学倒还好，隔三差五的总能听到一些消息，某某晋升结婚生子，虽然也开始模糊了起来，逐渐减少了联系，但依旧可以发去祝福和关心。而换了几家公司，每家公司交了一大堆朋友，最终也只有三两个逢年过节保持联系。如今处在信息化的时代，书信瞬时就打，当然今年这点十分的有幸，
 ### 灵魂
-比往年确是多读了几本书，之前工作中空寂的感觉一下就消下去不少。我常常嘲笑自己，书读的不多
+比往年确是多读了几本书，之前工作中空寂的感觉一下就消下去不少。
